# hdfs-gui

./: .gitignore  README.md  build.bat  dev.bat  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: hdfs_acls.rs  hdfs_avro.rs  hdfs_config.rs  hdfs_file.rs  hdfs_orc.rs  hdfs_parquet.rs  mod.rs
src-tauri/src/db/: db_init.rs
src/api/: hdfs_acls.ts  hdfs_avro.ts  hdfs_config.ts  hdfs_file.ts  hdfs_orc.ts  hdfs_parquet.ts
src/components/: HdfsAvroFileView.vue  HdfsByteFileView.vue  HdfsConfigForm.vue  HdfsFileAclsEdit.vue  HdfsOrcFileView.vue  HdfsParquetFileView.vue  HdfsPermissionsEdit.vue  HdfsTextFileEdit.vue
src/router/: index.ts
src/views/: HdfsFileView.vue  HdfsFolderView.vue  Home.vue
