[package]
name = "hdfs-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hdfs_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
anyhow = "1.0.94"
anyhow-tauri = "1.0.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "sqlx-sqlite", "default"] }
once_cell = "1.20.2"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }

hdfs-native = "0.11.0"
bytes = "1.9.0"
