[package]
name = "hdfs-gui"
version = "0.7.0"
description = "A Tauri App For Hdfs"
authors = ["awol2005ex@163.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hdfs_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["devtools"] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tauri-plugin-dialog = "2.2.0"
anyhow = "1.0.96"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "sqlx-sqlite", "default", "sqlite"] }
once_cell = "1.20.2"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
chrono = { version = "0.4.39", features = ["serde"] }

hdfs-native = "0.11.1"
orc-rust = {version="=0.6.0"}
arrow = { version="=53.3.0", features = ["prettyprint", "chrono-tz"] }
bytes = "1.9.0"
futures-util = "0.3.31"
futures = "0.3.31"
parquet = {version="=53.3.0",features= ["async"] }
tauri-plugin-log = "2"
log = "0.4.25"
apache-avro = "0.17.0"
awol2005ex_kerbeiros = "0.4.2"
awol2005ex_kerberos_keytab = "0.4.2"
awol2005ex_kerberos_crypto = "0.4.2"
ascii = "1.1.0"
hex = "0.4.3"
[profile.dev]
incremental = true
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
